# DORM

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
dorm/: __init__.py  apps.py  exceptions.py  executor.py  urls.py  views.py
dorm/static/dorm/css/: dorm.css
dorm/static/dorm/js/: dorm.js
dorm/templates/dorm/: base.html  playground.html
dorm/templates/dorm/partials/: error.html  result.html
sandbox/sandbox/: settings.py  urls.py
tests/: conftest.py  test_executor.py  test_views.py
